--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,15 +1,71 @@
 html, body, .root {
-  width: 100%;
+  width: 100vw;
+  height: 100vw;
   border: 0 0;
+  margin: 0 0;
+}
+.root {
+  padding: 10px 10px;
 }
 
 .navbar {
   border-bottom: solid 1px gray;
-  width: 100vw;
+  width: 100%;
+  background: rgba(128,128,128,.4);
+  display: flex;
+}
+
+.navbar a {
+  text-decoration: none;
+}
+
+@font-face {
+  font-family: 'RockoFLF-Bold';
+  src:url('../../../static/font/RockoFLF-Bold.ttf.woff') format('woff'),
+      url('../../../static/font/RockoFLF-Bold.ttf.svg#RockoFLF-Bold') format('svg'),
+      url('../../../static/font/RockoFLF-Bold.ttf.eot'),
+      url('../../../static/font/RockoFLF-Bold.ttf.eot?#iefix') format('embedded-opentype'); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.logo {
+  font-size: 2em;
+  font-family: 'RockoFLF-Bold';
+  color: black;
+  /* -webkit-text-stroke: 2px white;
+  -webkit-text-fill-color: black; */
+  /* text-shadow: 0 0 5px white; */
+  margin: 10px 10px;
+  text-shadow: 1px 1px 0 #fff,
+    -1px 1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px -1px 0 #fff,
+    0px 1px 0 #fff,
+    0px -1px 0 #fff,
+    -1px 0px 0 #fff,
+    1px 0px 0 #fff,
+    2px 2px 0 #fff,
+    -2px 2px 0 #fff,
+    2px -2px 0 #fff,
+    -2px -2px 0 #fff,
+    0px 2px 0 #fff,
+    0px -2px 0 #fff,
+    -2px 0px 0 #fff,
+    2px 0px 0 #fff,
+    1px 2px 0 #fff,
+    -1px 2px 0 #fff,
+    1px -2px 0 #fff,
+    -1px -2px 0 #fff,
+    2px 1px 0 #fff,
+    -2px 1px 0 #fff,
+    2px -1px 0 #fff,
+    -2px -1px 0 #fff;
 }
 
 ul {
-  width: 100%;
+  width: 1fr;
   padding: 0 0;
   list-style-type: none;
 }
