--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -23,5 +23,10 @@
 .splashBody {
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
   position: absolute;
+
+  transition: background-image 3s;
+  height: 100%;
+  width: 100%;
 }
