--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -14,6 +14,7 @@ html, body, .root {
   background: rgba(128,128,128,.4);
   display: flex;
   position: sticky;
+  z-index: 2;
 }
 
 .navbar a {
@@ -30,16 +31,18 @@ html, body, .root {
   font-style: normal;
 }
 
-
 .logo {
   font-size: 2em;
+  /* font-weight: bold; */
   font-family: 'RockoFLF-Bold';
   color: black;
+  text-decoration: none;
   /* -webkit-text-stroke: 2px white;
-  -webkit-text-fill-color: black; */
-  /* text-shadow: 0 0 5px white; */
+  -webkit-text-fill-color: black;
+  paint-order: stroke fill; */
+  text-shadow: 0 0 3px white;
   margin: 10px 10px;
-  text-shadow: 1px 1px 0 #fff,
+  /* text-shadow: 1px 1px 0 #fff,
     -1px 1px 0 #fff,
     1px -1px 0 #fff,
     -1px -1px 0 #fff,
@@ -62,7 +65,7 @@ html, body, .root {
     2px 1px 0 #fff,
     -2px 1px 0 #fff,
     2px -1px 0 #fff,
-    -2px -1px 0 #fff;
+    -2px -1px 0 #fff; */
 }
 
 ul {
