--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -24,17 +24,62 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  position: absolute;
+  position: fixed;
   top: 0px;
   z-index: -2;
 
   transition: background-image 3s;
   height: 100%;
   width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
   text-shadow: 0 0 3px white;
+} 
+
+.splashContent .logo {
+  font-size: 6em;
+  /* font-weight: bold; */
+  font-family: 'RockoFLF-Bold';
+  color: black;
+  text-decoration: none;
+  /* -webkit-text-stroke: 2px white;
+  -webkit-text-fill-color: black;
+  paint-order: stroke fill; */
+  /* text-shadow: 0 0 3px white; */
+  margin: 10px 10px;
+  text-shadow: 1px 1px 0 #fff,
+    -1px 1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px -1px 0 #fff,
+    0px 1px 0 #fff,
+    0px -1px 0 #fff,
+    -1px 0px 0 #fff,
+    1px 0px 0 #fff,
+    2px 2px 0 #fff,
+    -2px 2px 0 #fff,
+    2px -2px 0 #fff,
+    -2px -2px 0 #fff,
+    0px 2px 0 #fff,
+    0px -2px 0 #fff,
+    -2px 0px 0 #fff,
+    2px 0px 0 #fff,
+    1px 2px 0 #fff,
+    -1px 2px 0 #fff,
+    1px -2px 0 #fff,
+    -1px -2px 0 #fff,
+    2px 1px 0 #fff,
+    -2px 1px 0 #fff,
+    2px -1px 0 #fff,
+    -2px -1px 0 #fff;
 }
 
-.splashBody .logo {
-  font-size: 6em;
+.searchbar {
+  background-color: #fff;
+  vertical-align: middle;
+  min-width: 75%;
+
+  color: grey
 }
