--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,11 +3,15 @@ html, body, .root {
   height: 100vw;
   border: 0 0;
   margin: 0 0;
-
+  
   font-family: Arial, Helvetica, sans-serif;
 }
 .root {
   padding: 10px 10px;
+}
+
+body {
+  background-color: cadetblue;
 }
 
 a {
@@ -23,10 +27,11 @@ a:active {
 
 .navbar {
   border-bottom: solid 1px gray;
-  width: auto;
+  width: 100%;
   background: rgba(255, 255, 255, 0.4);
   display: flex;
   /* flex-direction: row; */
+  align-content: space-between;
   position: sticky;
   z-index: 2;
 }
@@ -84,21 +89,28 @@ a:active {
 }
 
 .sessionLinks ul {
-  /* position: */
   float: right;
 }
 
 .navbar > ul {
   /* width: 1fr; */
-  width: 100vw;
+  /* width: 100vw; */
   padding: 0 0;
   list-style-type: none;
   display: flex;
-  align-content: space-between;
+  /* align-content: space-between; */
+}
+
+.sessionLinks ul {
+  padding: 0 0;
+}
+.sessionLinks > button {
+  height: 3em;
+  width: 3em;
 }
 
 .navbar ul li {
-  width: 100%;
+  width: auto;
   list-style: none;
   /* display: flex; */
   /* align-content: space-between; */
