--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -99,7 +99,10 @@ a:active {
 .sessionLinksDiv ul {
   float: right;
   width: 100%;
-  background-color: #ddd8;
+  background-color: #dddb;
+  border: solid 1px #ddd;
+  border-radius: 4px;
+  /* padding: 8px 8px; */
 }
 
 .navbar > ul {
