--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -26,7 +26,7 @@
   background-repeat: no-repeat;
   position: fixed;
   top: 0px;
-  z-index: -2;
+  /* z-index: -2; */
 
   transition: background-image 3s;
   height: 100%;
