--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,4 +21,16 @@
 #modal-content {
   position: absolute;
   background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 0 20px black;
+}
+
+.deleteModal {
+  padding: 6px 20px 10px;
+  text-align: center;
+}
+
+.deleteModal button {
+  margin: 0 10%;
 }
